[gd_scene load_steps=9 format=3 uid="uid://cjgkjhe7k58s"]

[ext_resource type="Script" path="res://Scripts/Character/Player/Player.gd" id="1_goc7c"]
[ext_resource type="PackedScene" uid="uid://cxn66yxnlj23e" path="res://Scenes/Components/Actions/Attacks/Melee/attack_sword_swipe_2.tscn" id="2_koy14"]
[ext_resource type="PackedScene" uid="uid://cid0vv4el0hjd" path="res://Scenes/Components/health_component.tscn" id="4_kq5tx"]
[ext_resource type="PackedScene" uid="uid://xhr1iffrbnc1" path="res://Scenes/Components/Actions/Attacks/Magic/fireball_attack.tscn" id="4_xai7k"]
[ext_resource type="PackedScene" uid="uid://ok0kh73rhexf" path="res://Scenes/Components/Actions/Defensive/parry_action.tscn" id="5_03ona"]
[ext_resource type="PackedScene" uid="uid://c74bwndkx5s18" path="res://Scenes/Components/user_movement_component.tscn" id="5_4oels"]
[ext_resource type="PackedScene" uid="uid://b1jwlvk5nun41" path="res://Scenes/Components/resource_component.tscn" id="6_7mpsh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5pih8"]

[node name="KingArthur" type="CharacterBody2D"]
z_index = 5
collision_mask = 14
script = ExtResource("1_goc7c")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5pih8")

[node name="PrimaryAction" type="Node2D" parent="."]
rotation = 1.5708

[node name="SwordSwipe2" parent="PrimaryAction" instance=ExtResource("2_koy14")]

[node name="SecondaryAction" type="Node2D" parent="."]
rotation = 1.5708

[node name="fireball_attack" parent="SecondaryAction" instance=ExtResource("4_xai7k")]

[node name="DefensiveAction" type="Node2D" parent="."]
rotation = 1.5708

[node name="Parry" parent="DefensiveAction" instance=ExtResource("5_03ona")]

[node name="HealthComponent" parent="." instance=ExtResource("4_kq5tx")]
health = 50
armour = 1

[node name="UserMovementComponent" parent="." instance=ExtResource("5_4oels")]

[node name="ResourceComponent" parent="." instance=ExtResource("6_7mpsh")]
